--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,22 +3,18 @@ events {
 }
 
 http {
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
-
-    upstream django {
-        server web:8000;
-    }
-
     server {
         listen 80;
-        server_name _;
-        location /static/ {
-            alias /app/staticfiles/;
-        }
+        server_name 158.160.4.177;
 
         location / {
-            proxy_pass http://django;
+            proxy_pass http://django_app:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
+
+        location /static/ {
+            alias /app/staticfiles/;
         }
     }
 }
