--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,57 +1,65 @@
+version: "3.12"
+
 services:
+  # Веб-приложение (Django)
   web:
     build: .
-    command: sh -c "python manage.py migrate &&
-                    python manage.py collectstatic --noinput && 
-                    python manage.py add_test_data  && 
-                    python manage.py csu && 
-                    gunicorn config.wsgi:application --bind 0.0.0.0:8000"
+    command: gunicorn config.wsgi:application --bind 0.0.0.0:8000 --workers 3
     volumes:
       - .:/app
-      - static_volume:/app/staticfiles
-    expose:
-      - "8000"
+    ports:
+      - "8000:8000"
     depends_on:
       - db
       - redis
-    env_file:
-      - ./.env
+    environment:
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_HOST=db
+      - POSTGRES_PORT=5432
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - EMAIL_HOST_USER=${EMAIL_HOST_USER}
+      - EMAIL_HOST_PASSWORD=${EMAIL_HOST_PASSWORD}
+    networks:
+      - app-network
 
-  nginx:
-    build:
-      context: ./nginx
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - static_volume:/app/staticfiles
-    depends_on:
-      - web
-
+  # База данных (PostgreSQL)
   db:
     image: postgres:16
-    env_file:
-      - ./.env
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
-      - app_network  # ← Добавлено
-    healthcheck: # ← Проверка готовности БД
-      test: [ "CMD-SHELL", "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB" ]
-      interval: 5s
-      timeout: 5s
-      retries: 5
-    ports: # Для отладки (можно убрать в проде)
-      - "5432:5432"
+      - app-network
 
+  # Redis
   redis:
-    image: redis:7
+    image: redis:latest
+    networks:
+      - app-network
+
+  # Nginx (если нужен для проксирования)
+  nginx:
+    image: nginx:latest
     volumes:
-      - redis_data:/data
-    env_file:
-      - ./.env
+      - ./nginx.conf:/etc/nginx/nginx.conf
+      - static_volume:/app/static
+    ports:
+      - "80:80"
+    depends_on:
+      - web
+    networks:
+      - app-network
 
 volumes:
   postgres_data:
   static_volume:
-  redis_data:
+
+networks:
+  app-network:
+    driver: bridge
