--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,7 +47,7 @@ services:
   nginx:
     image: nginx:latest
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro  # монтируем файл с флагом "read-only"
       - static_volume:/app/static
     ports:
       - "80:80"
@@ -55,6 +55,7 @@ services:
       - web
     networks:
       - app-network
+
 
 volumes:
   postgres_data:
